--- a/style.css
+++ b/style.css
@@ -135,14 +135,17 @@ button:hover {
 
 .preview-img {
   width: 600px;
-  height: 300px;
+  height: 400px;
   overflow: hidden;
 }
 
 .preview-img img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  display: flex;
+  justify-content: center;
+  object-fit: contain;
+  align-items: center;
 }
 
 .controls button {
